--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: [Sagie Benaim]
-description: [PhD Student at Tel Aviv University\, Deep Learning Lab]
+description: [PhD Student at Tel Aviv University, Deep Learning Lab]
