--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
 theme: jekyll-theme-cayman
-title: [Sagie Benaim]
-description: [PhD Student at Tel Aviv University,, Deep Learning Lab]
+title: [Sagie Benaim | PhD Student at Tel Aviv University Deep Learning Lab]
