--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-cayman
-title: [Sagie Benaim | PhD Student at Tel Aviv University Deep Learning Lab]
+title: [Sagie Benaim]
+description: [PhD Student at Tel Aviv University and Deep Learning Researcher]
